--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.kotlin.android)
+    id 'com.android.application'
+    id 'com.chaquo.python'
+    id 'kotlin-android'
 }
 
 android {
@@ -8,6 +9,12 @@ android {
     compileSdk = 35
 
     defaultConfig {
+
+        sourceSets {
+            main {
+                python.srcDir "src/main/python"
+            }
+        }
         applicationId = "com.example.youtubedownloader"
         minSdk = 24
         targetSdk = 35
@@ -36,6 +43,13 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+    python {
+        version = "3.8"  // Chaquopy gère 3.8 en interne
+        pip {
+            install("yt-dlp")
+        }
+    }
 }
 
 dependencies {
@@ -47,6 +61,8 @@ dependencies {
     implementation(libs.androidx.navigation.fragment.ktx)
     implementation(libs.androidx.navigation.ui.ktx)
     implementation(libs.androidx.material3.android)
+    implementation(libs.firebase.database.ktx)
+    implementation libs.appcompat
 
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
